k8s/kafka-connect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaconnect-deploy
  labels:
    app: kafkaconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkaconnect
  template:
    metadata:
      labels:
        app: kafkaconnect
    spec:
      containers:
        - name: kafkaconnect-container
          image: debezium/connect:0.10.0.CR1
          readinessProbe:
            httpGet:
              path: /
              port: 8083
          livenessProbe:
            httpGet:
              path: /
              port: 8083
          ports:
          - containerPort: 8083

---

apiVersion: v1
kind: Service
metadata:
  name: kafkaconnect-service
  labels:
    app: kafkaconnect-service
spec:
  type: NodePort
  ports:
    - name: kafkaconnect
      protocol: TCP
      port: 8083
      nodePort: 30500
  selector:
      app: kafkaconnect
