k8s/kafka-manager.yml
kind: Service
apiVersion: v1
metadata:
  name: kafka-manager
spec:
  type: NodePort
  selector:
    app: kafka-manager
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-manager
  template:
    metadata:
      labels:
        app: kafka-manager
    spec:
      containers:
      - name: kafka-manager
        image: sheepkiller/kafka-manager@sha256:615f3b99d38aba2d5fdb3fb750a5990ba9260c8fb3fd29c7e776e8c150518b78
        ports:
        - containerPort: 9000
